tests/sksl/errors/ForLoopInductionVariableScope.glsl
### Compilation failed:

error: 3: symbol 'x' was already defined
        int x;       // conflicts with loop induction variable
        ^^^^^
error: 7: symbol 'y' was already defined
        float y;     // conflicts with loop induction variable
        ^^^^^^^
error: 8: symbol 'z' was already defined
        bool z;      // conflicts with loop induction variable
        ^^^^^^
3 errors
